--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -6,5 +6,10 @@
   Copyright © 2018 spark. All rights reserved.
 */
 
-"MeshSetup.SelectDevice.Title" = "Choose the device you’re setting up";
+"MeshSetup.SelectDevice.Title" = "Choose the device you’re setting up... or you are not";
+"MeshSetup.SelectDevice.MeshOnly" = "Mesh only";
+"MeshSetup.SelectDevice.MeshAndWifi" = "Mesh + Wi-Fi";
+"MeshSetup.SelectDevice.MeshAndCellular" = "Mesh + Cellular";
+
 "MeshSetup.GetReady.Title" = "Get your {{device}} ready for setup";
+
