add all screens up to enter selected network password. refactor flow delegate to have separate methods for providing flow information rather than using callbacks, provide failable constructors for MeshDeviceType and MeshSetupDataMatrix

--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -11,6 +11,9 @@
 "MeshSetup.SelectDevice.MeshAndWifi" = "Mesh + Wi-Fi";
 "MeshSetup.SelectDevice.MeshAndCellular" = "Mesh + Cellular";
 
+
+
+
 "MeshSetup.GetReady.Title" = "Get your {{device}} ready for setup";
 "MeshSetup.GetReady.Text1" = "Plug your {{device}} into a power source";
 "MeshSetup.GetReady.Text2" = "If your Xenon requires an external antenna, connect it your {{device}}";
@@ -25,6 +28,7 @@
 
 
 
+
 "MeshSetup.FindSticker.Title" = "Pair {{device}} with your phone";
 "MeshSetup.FindSticker.Text" = "Find the data matrix sticker on the front of your device. Use your phone camera to scan the code.";
 "MeshSetup.FindSticker.Button" = "Scan data matrix";
@@ -35,15 +39,33 @@
 "MeshSetup.FindCommissionerSticker.Button" = "Scan assisting device";
 
 
+
+
 "MeshSetup.ScanSticker.Title" = "Pair {{device}} with your phone";
 "MeshSetup.ScanSticker.Text" = "Point the camera at the data matrix on the {{device}}.";
+
+"MeshSetup.ScanCommissionerSticker.Title" = "Pair assisting device with your phone";
+"MeshSetup.ScanCommissionerSticker.Text" = "Point the camera at the data matrix on the device.";
+
+
+
 
 "MeshSetup.Pairing.PairingText" = "Pairing with your {{device}}";
 "MeshSetup.Pairing.SuccessTitle" = "Congrats!";
 "MeshSetup.Pairing.SuccessText" = "You’ve successfully paired {{deviceName}}";
 
+"MeshSetup.PairingCommissioner.PairingText" = "Pairing with your {{device}}";
+"MeshSetup.PairingCommissioner.SuccessTitle" = "Congrats!";
+"MeshSetup.PairingCommissioner.SuccessText" = "You’ve successfully paired {{deviceName}}";
+
+
+
 "MeshSetup.Networks.Title" = "Select mesh network to join";
 
 
+
+"MeshSetup.ExistingNetworkPassword.Title" = "Enter network password for {{network}}";
+"MeshSetup.ExistingNetworkPassword.Text" = "This is the password that was set when the mesh network was first created. This password is required to authenticate new devices added to this network.";
+"MeshSetup.ExistingNetworkPassword.Button" = "Join Network";
 
 
