fix get ready screen layout to remove content clipping, hardcoded strings and show video in correct aspect ratio regardless of the screen size. fix other content heavy screens to avoid content clipping on iphone 5 and 4s

--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -36,12 +36,19 @@
 
 
 
-
+"MeshSetup.GetReady.Button" = "Next";
 "MeshSetup.GetReady.Title" = "Get your {{device}} ready for setup";
 "MeshSetup.GetReady.Text1" = "Plug your {{device}} into a power source";
 "MeshSetup.GetReady.Text2" = "Confirm your {{device}} is blinking blue";
 "MeshSetup.GetReady.Text3" = "";
-"MeshSetup.GetReady.Button" = "{{device}} is blinking blue";
+"MeshSetup.GetReady.Text4" = "";
+
+"MeshSetup.GetReady.EthernetTitle" = "Attach your Ethernet Featherwing";
+"MeshSetup.GetReady.EthernetText1" = "Line up {{device}} pin headers and gently push the {{device}} into the Featherwing until flush";
+"MeshSetup.GetReady.EthernetText2" = "Insert an ethernet cable into the port";
+"MeshSetup.GetReady.EthernetText3" = "Plug your {{device}} into a power source";
+"MeshSetup.GetReady.EthernetText4" = "Confirm your {{device}} is blinking blue";
+
 
 "MeshSetup.GetCommissionerReady.Title" = "Add {{device}} to {{network}} mesh network";
 "MeshSetup.GetCommissionerReady.Text1" = "Find a device that is already on the {{network}} mesh network";
