change copy for cancel setup prompt

--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -19,6 +19,7 @@
 "MeshSetup.Action.Retry" = "Retry";
 "MeshSetup.Action.Continue" = "Continue";
 "MeshSetup.Action.CancelSetup" = "Cancel";
+"MeshSetup.Action.ContinueSetup" = "Don't Cancel";
 
 
 
