--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -70,7 +70,8 @@
 
 "MeshSetup.FindCommissionerSticker.Title" = "Pair assisting device with your phone";
 "MeshSetup.FindCommissionerSticker.Text" = "Find the data matrix sticker on the front of the assisting device. Use your phone camera to scan the code.";
-"MeshSetup.FindCommissionerSticker.Note" = "This device will act as the assisting device, to allow your {{device}} to join the {{network}} mesh network";
+"MeshSetup.FindCommissionerSticker.NoteTitle" = "HELPFUL TIP!";
+"MeshSetup.FindCommissionerSticker.NoteText" = "This device will act as the assisting device, to allow your {{device}} to join the {{network}} mesh network";
 "MeshSetup.FindCommissionerSticker.Button" = "Scan assisting device";
 
 
@@ -102,7 +103,8 @@
 
 
 "MeshSetup.ExistingNetworkPassword.Title" = "Enter network password for {{network}}";
-"MeshSetup.ExistingNetworkPassword.Text" = "This is the password that was set when the mesh network was first created. This password is required to authenticate new devices added to this network.";
+"MeshSetup.ExistingNetworkPassword.NoteTitle" = "HELPFUL TIP!";
+"MeshSetup.ExistingNetworkPassword.NoteText" = "This is the password that was set when the mesh network was first created. This password is required to authenticate new devices added to this network.";
 "MeshSetup.ExistingNetworkPassword.Button" = "Join Network";
 
 
@@ -119,7 +121,8 @@
 
 
 "MeshSetup.DeviceName.Title" = "Give your {{device}} a name";
-"MeshSetup.DeviceName.Text" = "Name your device something you will remember to help you easily identify it later.";
+"MeshSetup.DeviceName.NoteTitle" = "HELPFUL TIP!";
+"MeshSetup.DeviceName.NoteText" = "Name your device something you will remember to help you easily identify it later.";
 "MeshSetup.DeviceName.Button" = "Next";
 
 
@@ -174,14 +177,14 @@
 
 
 "MeshSetup.CreateNetworkName.Title" = "Give your network a name";
-"MeshSetup.CreateNetworkName.Text" = "Name your network something you will remember to help you easily identify it later.";
+"MeshSetup.CreateNetworkName.NoteText" = "Name your network something you will remember to help you easily identify it later.";
 "MeshSetup.CreateNetworkName.Button" = "Next";
 
 
 
 
 "MeshSetup.CreateNetworkPassword.Title" = "Set network admin password";
-"MeshSetup.CreateNetworkPassword.Text" = "You’ll need this password each time you want to add a new device to this mesh network.";
+"MeshSetup.CreateNetworkPassword.NoteText" = "You’ll need this password each time you want to add a new device to this mesh network.";
 "MeshSetup.CreateNetworkPassword.Button" = "Create network";
 "MeshSetup.CreateNetworkPassword.Repeat" = "Repeat password";
 "MeshSetup.CreateNetworkPassword.PasswordsDoNotMatch" = "Password and repeated password do not match.";
