--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -71,7 +71,9 @@
 "MeshSetup.FindCommissionerSticker.Title" = "Pair assisting device with your phone";
 "MeshSetup.FindCommissionerSticker.Text" = "Find the data matrix sticker on the front of the assisting device. Use your phone camera to scan the code.";
 "MeshSetup.FindCommissionerSticker.NoteTitle" = "HELPFUL TIP!";
-"MeshSetup.FindCommissionerSticker.NoteText" = "This device will act as the assisting device, to allow your {{device}} to join the {{network}} mesh network";
+"MeshSetup.FindCommissionerSticker.NoteText" = "This device will act as the assisting device
+
+to allow your {{device}} to join the {{network}} mesh network";
 "MeshSetup.FindCommissionerSticker.Button" = "Scan assisting device";
 
 
@@ -137,6 +139,17 @@
 "MeshSetup.ExistingNetworkPassword.NoteTitle" = "HELPFUL TIP!";
 "MeshSetup.ExistingNetworkPassword.NoteText" = "This is the password that was set when the mesh network was first created. This password is required to authenticate new devices added to this network.";
 "MeshSetup.ExistingNetworkPassword.Button" = "Join Network";
+
+
+
+
+
+"MeshSetup.WifiNetworkPassword.Title" = "Enter password for {{network}}";
+"MeshSetup.WifiNetworkPassword.InputTitle" = "Password";
+"MeshSetup.WifiNetworkPassword.Button" = "Connect to Device Cloud";
+
+
+
 
 
 
@@ -248,14 +261,20 @@
 
 "MeshSetup.GatewayInfoArgonStandalone.Title" = "OK—Let’s get this device connected to the Device Cloud";
 "MeshSetup.GatewayInfoArgonStandalone.Text1" = "Standalone devices require a connection to the Device Cloud to securely talk to the Internet";
-"MeshSetup.GatewayInfoArgonStandalone.Text2" = "To connect, you will send the Argon Wi-Fi network credentials";
+"MeshSetup.GatewayInfoArgonStandalone.Text2" = "To connect
+
+you will send the Argon Wi-Fi network credentials";
 "MeshSetup.GatewayInfoArgonStandalone.Button" = "Next";
 
 
 "MeshSetup.GatewayInfoArgonMesh.Title" = "OK—Let’s get this mesh gateway connected to the Device Cloud";
 "MeshSetup.GatewayInfoArgonMesh.Text1" = "Gateways require a connection to the Device Cloud to allow communication between the local mesh network and the Internet";
-"MeshSetup.GatewayInfoArgonMesh.Text2" = "To connect, you will send the Argon Wi-Fi network credentials";
-"MeshSetup.GatewayInfoArgonMesh.Text3" = "Once connected, you can create or join a mesh network using this Argon";
+"MeshSetup.GatewayInfoArgonMesh.Text2" = "To connect
+
+you will send the Argon Wi-Fi network credentials";
+"MeshSetup.GatewayInfoArgonMesh.Text3" = "Once connected
+
+you can create or join a mesh network using this Argon";
 "MeshSetup.GatewayInfoArgonMesh.Button" = "Next";
 
 
@@ -263,16 +282,30 @@
 
 "MeshSetup.GatewayInfoBoronStandalone.Title" = "OK—Let’s get this device connected to the Device Cloud";
 "MeshSetup.GatewayInfoBoronStandalone.Text1" = "Standalone devices require a connection to the Device Cloud to securely talk to the Internet";
-"MeshSetup.GatewayInfoBoronStandalone.Text2" = "To connect, the device will use the Particle SIM inside your Boron, which has already been activated";
+"MeshSetup.GatewayInfoBoronStandalone.Text2" = "To connect
+
+the device will use the Particle SIM inside your Boron
+
+which has already been activated";
 "MeshSetup.GatewayInfoBoronStandalone.Button" = "Connect to Device Cloud";
-"MeshSetup.GatewayInfoBoronStandalone.Text2Activate" = "To connect, we’ll activate the Particle SIM inside your Boron";
+"MeshSetup.GatewayInfoBoronStandalone.Text2Activate" = "To connect
+
+we’ll activate the Particle SIM inside your Boron";
 "MeshSetup.GatewayInfoBoronStandalone.ButtonActivate" = "Activate SIM & Connect";
 
 
 "MeshSetup.GatewayInfoBoronMesh.Title" = "OK—Let’s get this mesh gateway connected to the Device Cloud";
 "MeshSetup.GatewayInfoBoronMesh.Text1" = "Gateways require a connection to the Device Cloud to allow communication between the local mesh network and the Internet";
-"MeshSetup.GatewayInfoBoronMesh.Text2" = "To connect, the device will use the Particle SIM inside your Boron, which has already been activated ";
-"MeshSetup.GatewayInfoBoronMesh.Text3" = "Once connected, you can create or join a mesh network using this Boron";
+"MeshSetup.GatewayInfoBoronMesh.Text2" = "To connect
+
+the device will use the Particle SIM inside your Boron
+
+which has already been activated ";
+"MeshSetup.GatewayInfoBoronMesh.Text3" = "Once connected
+
+you can create or join a mesh network using this Boron";
 "MeshSetup.GatewayInfoBoronMesh.Button" = "Connect to Device Cloud";
-"MeshSetup.GatewayInfoBoronMesh.Text2Activate" = "To connect, we’ll activate the Particle SIM inside your Boron";
+"MeshSetup.GatewayInfoBoronMesh.Text2Activate" = "To connect
+
+we’ll activate the Particle SIM inside your Boron";
 "MeshSetup.GatewayInfoBoronStandalone.ButtonActivate" = "Activate SIM & Connect";
