--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -261,20 +261,14 @@ to allow your {{device}} to join the {{network}} mesh network";
 
 "MeshSetup.GatewayInfoArgonStandalone.Title" = "OK—Let’s get this device connected to the Device Cloud";
 "MeshSetup.GatewayInfoArgonStandalone.Text1" = "Standalone devices require a connection to the Device Cloud to securely talk to the Internet";
-"MeshSetup.GatewayInfoArgonStandalone.Text2" = "To connect
-
-you will send the Argon Wi-Fi network credentials";
+"MeshSetup.GatewayInfoArgonStandalone.Text2" = "To connect you will send the Argon Wi-Fi network credentials";
 "MeshSetup.GatewayInfoArgonStandalone.Button" = "Next";
 
 
 "MeshSetup.GatewayInfoArgonMesh.Title" = "OK—Let’s get this mesh gateway connected to the Device Cloud";
 "MeshSetup.GatewayInfoArgonMesh.Text1" = "Gateways require a connection to the Device Cloud to allow communication between the local mesh network and the Internet";
-"MeshSetup.GatewayInfoArgonMesh.Text2" = "To connect
-
-you will send the Argon Wi-Fi network credentials";
-"MeshSetup.GatewayInfoArgonMesh.Text3" = "Once connected
-
-you can create or join a mesh network using this Argon";
+"MeshSetup.GatewayInfoArgonMesh.Text2" = "To connect you will send the Argon Wi-Fi network credentials";
+"MeshSetup.GatewayInfoArgonMesh.Text3" = "Once connected you can create or join a mesh network using this Argon";
 "MeshSetup.GatewayInfoArgonMesh.Button" = "Next";
 
 
@@ -282,30 +276,16 @@ you can create or join a mesh network using this Argon";
 
 "MeshSetup.GatewayInfoBoronStandalone.Title" = "OK—Let’s get this device connected to the Device Cloud";
 "MeshSetup.GatewayInfoBoronStandalone.Text1" = "Standalone devices require a connection to the Device Cloud to securely talk to the Internet";
-"MeshSetup.GatewayInfoBoronStandalone.Text2" = "To connect
-
-the device will use the Particle SIM inside your Boron
-
-which has already been activated";
+"MeshSetup.GatewayInfoBoronStandalone.Text2" = "To connect the device will use the Particle SIM inside your Boron which has already been activated";
 "MeshSetup.GatewayInfoBoronStandalone.Button" = "Connect to Device Cloud";
-"MeshSetup.GatewayInfoBoronStandalone.Text2Activate" = "To connect
-
-we’ll activate the Particle SIM inside your Boron";
+"MeshSetup.GatewayInfoBoronStandalone.Text2Activate" = "To connect we’ll activate the Particle SIM inside your Boron";
 "MeshSetup.GatewayInfoBoronStandalone.ButtonActivate" = "Activate SIM & Connect";
 
 
 "MeshSetup.GatewayInfoBoronMesh.Title" = "OK—Let’s get this mesh gateway connected to the Device Cloud";
 "MeshSetup.GatewayInfoBoronMesh.Text1" = "Gateways require a connection to the Device Cloud to allow communication between the local mesh network and the Internet";
-"MeshSetup.GatewayInfoBoronMesh.Text2" = "To connect
-
-the device will use the Particle SIM inside your Boron
-
-which has already been activated ";
-"MeshSetup.GatewayInfoBoronMesh.Text3" = "Once connected
-
-you can create or join a mesh network using this Boron";
+"MeshSetup.GatewayInfoBoronMesh.Text2" = "To connect the device will use the Particle SIM inside your Boron which has already been activated ";
+"MeshSetup.GatewayInfoBoronMesh.Text3" = "Once connected you can create or join a mesh network using this Boron";
 "MeshSetup.GatewayInfoBoronMesh.Button" = "Connect to Device Cloud";
-"MeshSetup.GatewayInfoBoronMesh.Text2Activate" = "To connect
-
-we’ll activate the Particle SIM inside your Boron";
+"MeshSetup.GatewayInfoBoronMesh.Text2Activate" = "To connect we’ll activate the Particle SIM inside your Boron";
 "MeshSetup.GatewayInfoBoronStandalone.ButtonActivate" = "Activate SIM & Connect";
